# hot_wheels

./: .gitignore  README.md  groups  project.config
hotwheels_ws/resource/scripts/: ros_install.sh
hotwheels_ws/resource/tivasketch/: motorcontrol.ino  pwm_test.ino
hotwheels_ws/src/hotwheels_control/: CMakeLists.txt  package.xml
hotwheels_ws/src/hotwheels_controller_configuration/: CMakeLists.txt  package.xml
hotwheels_ws/src/hotwheels_controller_configuration/config/: gazebo_pids.yaml  mobile_base_controller.yaml
hotwheels_ws/src/hotwheels_controller_configuration/launch/: default_controllers.launch
hotwheels_ws/src/hotwheels_description/: CMakeLists.txt  package.xml  urdf.rviz
hotwheels_ws/src/hotwheels_description/gazebo/: gazebo.urdf.xacro
hotwheels_ws/src/hotwheels_description/launch/: show_kabuto.launch  upload.launch
hotwheels_ws/src/hotwheels_description/robots/: kabuto.urdf.xacro
hotwheels_ws/src/hotwheels_description/urdf/: kabuto.urdf.xacro  xtion_camera.xacro
hotwheels_ws/src/hotwheels_gazebo/: CMakeLists.txt  package.xml
hotwheels_ws/src/hotwheels_gazebo/launch/: hotwheels_gazebo.launch  hotwheels_spawn.launch
hotwheels_ws/src/hotwheels_hardware/: CMakeLists.txt  package.xml
hotwheels_ws/src/hotwheels_hardware/config/: encoders.yaml  motors.yaml
hotwheels_ws/src/hotwheels_hardware/include/hotwheels_hardware/: hotwheels_hardware.h  pwm_converter.h
hotwheels_ws/src/hotwheels_hardware/launch/: hotwheels_hardware.launch
hotwheels_ws/src/hotwheels_hardware/src/: hotwheels_base.cpp  hotwheels_hardware.cpp
hotwheels_ws/src/hotwheels_msgs/: CMakeLists.txt  package.xml
hotwheels_ws/src/hotwheels_msgs/msg/: Control.msg  Feedback.msg
hotwheels_ws/src/hotwheels_start/: CMakeLists.txt  mechwstart.sh  package.xml
hotwheels_ws/src/hotwheels_start/config/: joy_teleop_xbox_controller.yaml
hotwheels_ws/src/hotwheels_start/launch/: CMakeLists.txt  gscam.launch  hotwheels_light_start.launch  hotwheels_start.launch  hotwheels_start_kabuto.launch  joy_teleop.launch  key_teleop.launch  libuvc.launch  ps3_eye_usbcam.launch  rospubmech.launch  rosserial.launch  usb_cam.launch  usb_cam2.launch  wcam23_gscam.launch  wcam23_usb_cam.launch  wcam23_vid_stream.launch  xtion.launch
