<?xml version="1.0"?>
<package>
  <name>hotwheels_controller_configuration</name>
  <version>0.0.0</version>
  <description>The hotwheels_controller_configuration package</description>
  <maintainer email="paloczi.arpad@gmail.com">Arpad Paloczi</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>joint_state_controller</run_depend>
  <run_depend>diff_drive_controller</run_depend>
  <run_depend>joint_trajectory_controller</run_depend>
  <run_depend>velocity_controllers</run_depend>
  <run_depend>position_controllers</run_depend>
</package>
