<?xml version="1.0"?>
<package>
  <name>hotwheels_msgs</name>
  <version>0.0.0</version>
  <description>The hotwheels_msgs package</description>
  <maintainer email="saznetro@gmail.com">Arpad Paloczi</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>
</package>
