<?xml version="1.0"?>
<package>
  <name>hotwheels_start</name>
  <version>0.0.1</version>
  <description>The hotwheels_start package</description>

  <maintainer email="saznetro@gmail.com">Arpad Paloczi</maintainer>

  <license>BSD</license>

  
  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>hotwheels_controller_configuration</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>openni2_launch</run_depend>
  <run_depend>key_teleop</run_depend>
  
  <run_depend>usb_cam</run_depend>  
  <run_depend>joy_teleop</run_depend>
  <run_depend>image_transport</run_depend>

  <run_depend>compressed_image_transport</run_depend>

  <run_depend>robot_state_publisher</run_depend> 
  
   <run_depend>sound_play</run_depend> 

</package>
